# voxel_optimizer

./: .gitignore  Cargo.toml  README.md  all.vox
benchmarks/input/: 3x3x3.vox  Light sabers.vox  menger.vox
benchmarks/output_mv/: 3x3x3.mtl  Light sabers-0.mtl  Light sabers-1.mtl  cars-0.mtl  cars-1.mtl  castle.mtl  doom.mtl  menger.mtl  teapot.mtl
benchmarks/output_vo/: 3x3x3.mtl  Lightsabers.mtl  cars.mtl  castle.mtl  chr_knight.mtl  doom.mtl  menger.mtl  teapot.mtl
magicavoxelbench/: untitled-0.mtl  untitled-1.mtl  untitled-10.mtl  untitled-11.mtl  untitled-2.mtl  untitled-3.mtl  untitled-4.mtl  untitled-5.mtl  untitled-6.mtl  untitled-7.mtl  untitled-8.mtl  untitled-9.mtl
src/: greedy_mesher.rs  main.rs  options.txt  texture_mapping.rs  version.txt  vox_exporter.rs  vox_importer.rs
voxeloptimizerbench/: untitled-0.mtl  untitled-1.mtl  untitled-10.mtl  untitled-11.mtl  untitled-2.mtl  untitled-3.mtl  untitled-4.mtl  untitled-5.mtl  untitled-6.mtl  untitled-7.mtl  untitled-8.mtl  untitled-9.mtl
