[package]
name = "greedy-meshing"
version = "1.0.0"
edition = "2021"

[[bin]]
name="VoxelOptimizer"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.finalrelease]
inherits = "release"
opt-level = "z"
strip = true
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
crunch = { git = "https://github.com/ChevyRay/crunch-rs", branch = "master" }
eframe = "0.22.0"
rfd = "0.11.4"
ndarray = "0.15.6"
png = "0.17.10"

